--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>HTML</title>
+	<title>Avtoparktronik</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +15,7 @@
 				<div>
 					<img src="img/Logo.png" alt="">
 				</div>
-				<div>
+				<div class="tel">
 					<span class="telNumber">(097)963-01-48</span>
 					<input type="button" value="Заказать звонок">
 				</div>
