--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<h2>КАК ВЫ <span id="yellow">ЭКОНОМИТЕ?</span></h2>
 				<div class="yellowHr"></div>
 				<div class="economy">
-					<div class="economyItem">
+					<div class="economyItem bamper">
 						<p><span class="lowerCase">Ремонт бампера стоит от</span> <br><strong id="yellow">6000</strong><strong> РУБЛЕЙ</strong></p>
 						<div><img src="img/chika.png" alt="img"></div>
 						<div class='doubleImg'>
@@ -176,19 +176,19 @@
 					<div class="economyItem">
 						<p><span class="lowerCase">видеопарктроник с подарком стоит</span><br><span><strong>ВСЕГО </strong><strong id="yellow">3990</strong><strong> рублей</strong></span></p>
 						<div class="tripleImg">
-							<div><img src="img/center_01_PNG.png" alt="img"></div>
+							<div><img src="img/center_01_PNG.png" alt="img" class="economyImg"></div>
 							<div><img src="img/+.png" alt="img"></div>
-							<div><img src="img/glass.png" alt="img"></div>
+							<div><img src="img/glass.png" alt="img" class="economyImg"></div>
 						</div>
 					</div>
 				</div>
 			</section>
 			<input type="button" value="Заказать" class='yellowBtn'>
 			<section class="feedBackBlock">
-				<h2>ОТЗЫВЫ О НАШЕМ ВИДЕОПАРКТРОНИКЕ?</h2>
+				<h2>ОТЗЫВЫ О НАШЕМ ВИДЕОПАРКТРОНИКЕ</h2>
 				<div class="yellowHr"></div>
 				<div class="feedBack">
-					<div class="feedBackItem"><img src="img/RightArrow.png" alt="img"></div>
+					<div class="feedBackItem arrow"><img src="img/RightArrow.png" alt="img"></div>
 					<div class="feedBackItem">
 						<div class="imgContainer">
 							<div><img src="img/number.png" alt="img"></div>
@@ -202,7 +202,7 @@
 					<div class="feedBackItem">
 						<p>Опять долгие ночи в интернете в поисках обзоров и сравнений… Проблема таких устройств что у них либо дизайн уродский огромный — в полтора раза больше штатного, а я вообще не люблю заднее зеркало, так как за 3 года вождения рабочих "каблучков" типа Кангу и Берлинго вообще привык без него обходится, либо тех. данные никакие — камеры очень плохого качества… Уже думал что печаль… :( Но вот за пару дней поисков наткнулся на то о чем мечтал действительно — HD Recorder. Нашел его у одного из драйвечан, и у других. Все в восторге от данного устройства. Качество видео очень хорошее, в машине не видно его вообще, крепления на штатное зеркало любой машины, вообщем то что доктор прописал!</p>
 					</div>
-					<div class="feedBackItem"><img src="img/LeftArrow.png" alt=""></div>
+					<div class="feedBackItem arrow"><img src="img/LeftArrow.png" alt=""></div>
 				</div>
 			</section>
 			<section class="guaranteesBlock">
@@ -258,9 +258,9 @@
 					<div class="formItem">
 						<div><img src="img/center_01_PNG.png" alt="img"></div>
 						<div id="plus"><img src="img/+.png" alt="img"></div>
-						<div>
+						<div id='lastPriceFlex'>
 							<div><img src="img/glass.png" alt="img"></div>
-							<div><img src="img/%D0%A6%D0%B5%D0%BD%D0%B0.png" alt="img"></div>
+							<div id='lastPrice'><img src="img/%D0%A6%D0%B5%D0%BD%D0%B0.png" alt="img"></div>
 						</div>
 					</div>
 					<div class="formItem">
