--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -27,8 +27,8 @@
 			<div class="container">
 				<div class="toOrderContent">
 					<div class="toOrderText">
-						<p><span id="white">ВИДЕОПАРКТРОНИК -</span> <br><span id="yellow">АВТОНОВИНКА 2017 ГОДА</span></p>
-						<p id='yellow' class="second">Закажите <span id="lightgray">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span id="lightgray">солнцезащитный козырек!</span></p>
+						<p><span id="white">ВИДЕОПАРКТРОНИК -</span> <br><span class="yellow">АВТОНОВИНКА 2017 ГОДА</span></p>
+						<p class='yellowsecond lightgray'>Закажите <span class="">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span class="lightgray">солнцезащитный козырек!</span></p>
 						<div class="clock">
 							<div class="clockItem">1</div>
 							<div class="clockItem">5</div>
@@ -54,7 +54,7 @@
 		</section>
 		<section class="characteristic">
 			<div class="container">
-				<h2><span id='yellow'>ХАРАКТЕРИСТИКИ</span> ВИДЕОПАРКТРОНИКА</h2>
+				<h2><span class='yellow'>ХАРАКТЕРИСТИКИ</span> ВИДЕОПАРКТРОНИКА</h2>
 				<div class="yellowHr"></div>
 				<div class="characteristicItem">
 					<div class="characteristicItemOne">
@@ -120,7 +120,7 @@
 		</section>
 		<div class="container">
 			<input type="button" value="Заказать" class='yellowBtn'>
-			<h2>Причины <span id="yellow">купить видеопарктроник</span> у нас</h2>
+			<h2>Причины <span class="yellow">купить видеопарктроник</span> у нас</h2>
 			<div class="yellowHr"></div>
 			<section class="reason">
 				<div class="reasonTitle">
@@ -153,7 +153,7 @@
 				</div>
 			</section>
 			<section class="videoBlock">
-				<h2>КАК РАБОТАЕТ <span id="yellow">ВИДЕОПАРКТРОНИК?</span></h2>
+				<h2>КАК РАБОТАЕТ <span class="yellow">ВИДЕОПАРКТРОНИК?</span></h2>
 				<div class="yellowHr"></div>
 				<div class="video">
 					<video controls="controls" poster="img/clip.png">
@@ -162,11 +162,11 @@
 				</div>
 			</section>
 			<section class="economyBlock">
-				<h2>КАК ВЫ <span id="yellow">ЭКОНОМИТЕ?</span></h2>
+				<h2>КАК ВЫ <span class="yellow">ЭКОНОМИТЕ?</span></h2>
 				<div class="yellowHr"></div>
 				<div class="economy">
 					<div class="economyItem bamper">
-						<p><span class="lowerCase">Ремонт бампера стоит от</span> <br><strong id="yellow">6000</strong><strong> РУБЛЕЙ</strong></p>
+						<p><span class="lowerCase">Ремонт бампера стоит от</span> <br><strong class="yellow">6000</strong><strong> РУБЛЕЙ</strong></p>
 						<div><img src="img/chika.png" alt="img"></div>
 						<div class='doubleImg'>
 							<div><img src="img/bamper1.png" alt="img"></div>
@@ -174,7 +174,7 @@
 						</div>
 					</div>
 					<div class="economyItem">
-						<p><span class="lowerCase">видеопарктроник с подарком стоит</span><br><span><strong>ВСЕГО </strong><strong id="yellow">3990</strong><strong> рублей</strong></span></p>
+						<p><span class="lowerCase">видеопарктроник с подарком стоит</span><br><span><strong>ВСЕГО </strong><strong class="yellow">3990</strong><strong> рублей</strong></span></p>
 						<div class="tripleImg">
 							<div><img src="img/center_01_PNG.png" alt="img" class="economyImg"></div>
 							<div><img src="img/+.png" alt="img"></div>
@@ -252,7 +252,7 @@
 				</div>
 			</section>
 			<section class="formBclock">
-				<h2>ЗАКАЖИТЕ СВОЙ ПАРКТРОНИК <span id="yellow">ДО КОНЦА ДНЯ</span> <br>И <span id="yellow">ПОЛУЧИТЕ В ПОДАРОК</span> АНТИБЛИКОВОЕ СТЕКЛО</h2>
+				<h2>ЗАКАЖИТЕ СВОЙ ПАРКТРОНИК <span class="yellow">ДО КОНЦА ДНЯ</span> <br>И <span class="yellow">ПОЛУЧИТЕ В ПОДАРОК</span> АНТИБЛИКОВОЕ СТЕКЛО</h2>
 				<div class="yellowHr"></div>
 				<div class="form">
 					<div class="formItem">
@@ -265,7 +265,7 @@
 					</div>
 					<div class="formItem">
 						<form action="#">
-							<input type="name" placeholder="Введите имя">
+							<input type="text" placeholder="Введите имя">
 							<input type="tel" placeholder="+7 (___) ___ __ __">
 						</form>
 						<div class="clock">
