--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 				<div class="toOrderContent">
 					<div class="toOrderText">
 						<p><span id="white">ВИДЕОПАРКТРОНИК -</span> <br><span class="yellow">АВТОНОВИНКА 2017 ГОДА</span></p>
-						<p class='yellowsecond lightgray'>Закажите <span class="">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span class="lightgray">солнцезащитный козырек!</span></p>
+						<p class='yellowsecond yellow'>Закажите <span class="lightgray">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span class="lightgray">солнцезащитный козырек!</span></p>
+						<div class="toOrderImgOneMobile">
+							<img src="img/center_01_PNG.png" alt="img">
+						</div>
+						<div class="toOrderImgTwoMobile">
+							<img src="img/%D0%A6%D0%B5%D0%BD%D0%B0.png" alt="img">
+						</div>
 						<div class="clock">
 							<div class="clockItem">1</div>
 							<div class="clockItem">5</div>
