--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="toOrderContent">
 					<div class="toOrderText">
 						<p><span id="white">ВИДЕОПАРКТРОНИК -</span> <br><span class="yellow">АВТОНОВИНКА 2017 ГОДА</span></p>
-						<p class='yellowsecond yellow'>Закажите <span class="lightgray">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span class="lightgray">солнцезащитный козырек!</span></p>
+						<p class='yellowSecond yellow'>Закажите <span class="lightgray">видеопарктроник</span><br> до конца дня и получите<br> в подарок <span class="lightgray">солнцезащитный козырек!</span></p>
 						<div class="toOrderImgOneMobile">
 							<img src="img/center_01_PNG.png" alt="img">
 						</div>
