--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						<p><span class="lowerCase">видеопарктроник с подарком стоит</span><br><span><strong>ВСЕГО </strong><strong class="yellow">3990</strong><strong> рублей</strong></span></p>
 						<div class="tripleImg">
 							<div><img src="img/center_01_PNG.png" alt="img" class="economyImg"></div>
-							<div><img src="img/+.png" alt="img"></div>
+							<div id="economyPlus"><img src="img/+.png" alt="img"></div>
 							<div><img src="img/glass.png" alt="img" class="economyImg"></div>
 						</div>
 					</div>
